feat: Implementada a rota de envio de email para alterar senha

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 MONGO_URL=mongodb+srv://igorminranda17:yxpcuCLO0ZU6iylI@cluster0.qoyfpuq.mongodb.net/AuthDB
 JWT_SECRET=secret123
+EMAIL=igorminranda17@gmail.com
+EMAIL_PASSWORD=jhdzgfdepmlfhuuk
+LIVE_URL=http://localhost:4200
