--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ MONGO_URL=mongodb+srv://igorminranda17:yxpcuCLO0ZU6iylI@cluster0.qoyfpuq.mongodb
 JWT_SECRET=secret123
 EMAIL=igorminranda17@gmail.com
 EMAIL_PASSWORD=jhdzgfdepmlfhuuk
-LIVE_URL=http://localhost:4200
+LIVE_URL=https://books-store-1ucg7fa0m-igormontezuma20s-projects.vercel.app
